--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                     <input type="password" required>
                     <label>Password</label>
                 </div>
-                <div class="rember-forgot">
+                <div class="remember-forgot">
                     <label><input type="checkbox">Remember me</label>
                     <a href="#">Forgot Password</a>
                 </div>
                 <button type="submit" class="btn">Login</button>
                 <div class="login-register">
-                    <p>Don't have an account?<a href="#" class="register-link">Register</a></p>
+                    <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
                 </div>
             </form>
         </div>
@@ -84,5 +84,4 @@
 
     
 </body>
-
 </html>
